{
    "name": "SelectInput",
    "maps": [
        {
            "name": "Select",
            "id": "7fb622f9-5fa7-428c-bfaa-b046b8605e1e",
            "actions": [
                {
                    "name": "Select",
                    "type": "Button",
                    "id": "2928d8ea-8f19-4f5c-b776-579d33e5e45e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "f98f8bb3-fea2-4044-8fc5-775ccb73ce19",
                    "path": "<Keyboard>/f",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Select",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Choice",
            "id": "fb9ef7c5-51ce-4a72-8bf7-fc9377d690b4",
            "actions": [
                {
                    "name": "choiceRight",
                    "type": "Button",
                    "id": "b7108dee-5756-4c1f-ad95-5d4f5499d7a6",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "choiceLeft",
                    "type": "Button",
                    "id": "58650cdb-e049-43ae-b595-d91e577bac56",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "644571c0-7d71-4de8-b4cb-98d3ea167d97",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "choiceRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0ea86777-943f-4af3-96ab-4695d2183adf",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "choiceLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}